# docker-ubuntu

./: .gitignore  CMakeLists.txt  README.md  hello  hello.c  hello.h  index-sort-f.html  index-sort-l.html  index.html
.github/workflows/: ci.yml
docker-ubuntu/: hello.c.func-sort-c.html  hello.c.func.html  hello.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html
docker-ubuntu/tests/: index-sort-f.html  index-sort-l.html  index.html  test_hello.cpp.func-sort-c.html  test_hello.cpp.func.html  test_hello.cpp.gcov.html
root/: hello.c.func-sort-c.html  hello.c.func.html  hello.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html
tests/: index-sort-f.html  index-sort-l.html  index.html  test_hello.cpp  test_hello.cpp.func-sort-c.html  test_hello.cpp.func.html  test_hello.cpp.gcov.html
